# stm32f4-dac

./: .gitignore  README.md
firmware/cube/: .mxproject  f4-dac-cube.ioc
firmware/cube/Core/Inc/: i2s.h  main.h  stm32f4xx_it.h
firmware/cube/Core/Src/: dma.c  gpio.c  i2c.c  i2s.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
firmware/cube/USB_DEVICE/App/: usb_device.c  usbd_audio_if.c  usbd_desc.c
firmware/exam/EX-01-I2S-48K/: CMakeLists.txt
firmware/exam/EX-01-I2S-48K/src/: main.c
firmware/exam/EX-01-I2S-48K/src/bsp/device/: stm32f4xx_hal_conf.h  stm32f4xx_it.c
firmware/exam/EX-01-I2S-48K/src/common/core/: qbuffer.c
firmware/exam/EX-01-I2S-48K/src/common/hw/include/: assert_def.h  i2s.h  pca9554.h  psram.h  rtc.h
firmware/exam/EX-01-I2S-48K/src/hw/: hw_def.h
firmware/exam/EX-01-I2S-48K/src/hw/driver/: button.c  es8156.c  i2c.c  i2s.c  led.c  log.c  uart.c
firmware/stm32f4-dac-fw/: CMakeLists.txt
firmware/stm32f4-dac-fw/src/ap/: ap.c
firmware/stm32f4-dac-fw/src/bsp/: bsp.c  bsp.h
firmware/stm32f4-dac-fw/src/bsp/ldscript/: STM32F411CEUx_FLASH.ld
firmware/stm32f4-dac-fw/src/bsp/startup/: startup_stm32f411xe.s
firmware/stm32f4-dac-fw/src/common/core/: qbuffer.h
firmware/stm32f4-dac-fw/src/common/hw/include/: adc.h  buzzer.h  es8156.h  esp.h  gpio.h  i2s.h  log.h  power.h
firmware/stm32f4-dac-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32f4-dac-fw/src/hw/driver/: assert.c  button.c  eeprom.c  es8156.c  fault.c  i2s.c  reset.c  rtc.c  swtimer.c
firmware/stm32f4-dac-fw/src/hw/driver/usb/: usb.c  usb.h  usbd_conf.c
firmware/stm32f4-dac-fw/src/hw/driver/usb/usb_audio/: usbd_audio.c  usbd_audio.h  usbd_audio_if.c  usbd_audio_if.h  usbd_desc.c  usbd_desc.h
firmware/stm32f4-dac-fw/src/hw/driver/usb/usb_cdc/: usbd_desc.c
firmware/stm32f4-dac-fw/src/hw/driver/usb/usb_msc/: usbd_storage.c
firmware/stm32f4-dac-fw/src/lib/ST/STM32_USB_Device_Library/Core/Src/: usbd_core.c
